1.重新配置 1.1 创建路由、工具、配置、公共组件、布局等文件夹 2.布局样式1.0版本拟定

--- a/src/assets/style/Index2.css
+++ b/src/assets/style/Index2.css
@@ -2,12 +2,7 @@
     background: #eee;
 }
 
-#app {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-}
+
 
 .main-area {
     --cell-size: 16px;
@@ -160,7 +155,7 @@
     box-shadow: 2px 2px #808080 inset;
 }
 
-.restart-btn:touch {
+.restart-btn {
     box-shadow: 2px 2px #808080 inset;
 }
 
